# opensearch-agent-skills

./: .gitignore  AGENTS.md  DEVELOPER_GUIDE.md  MAINTAINERS.md  README.md  pyproject.toml
.github/actions/sync-preflight/: action.yml
.github/workflows/: ci.yml  sync-bot-ci.yml  sync-skills.yml  validate-skills.yml
skills/opensearch-skills/: SKILL.md
sync/: README.md  SYNCED_SKILL_POLICY.md  config.yaml  state.json  sync.py  sync.yaml
sync-bot/: README.md  pyproject.toml
sync-bot/src/skills_sync/: __init__.py  __main__.py  main.py
sync-bot/tests/: conftest.py  test_preflight_action.sh  test_sync_integration.py  test_sync_unit.py
sync/sources/: README.md  _test-broken.yaml  anthropic-mcp-builder.yaml  anthropic-skill-creator.yaml  opensearch-migrations-overview.yaml  opensearch-migrations.yaml  solr-opensearch-migration-advisor.yaml
tests/: conftest.py  test_sync_integration.py
