[project]
name = "opensearch-agent-skills"
version = "0.1.0"
description = "OpenSearch Agent Skills"
requires-python = ">=3.11"
dependencies = [
    "opensearch-py",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    # Runtime deps of sync/sync.py — needed so tests can import it.
    "pyyaml",
    "skills-ref>=0.1.1",
]
