[project]
name = "opensearch-skills-sync"
version = "0.1.0"
description = "Import skill subdirectories from upstream repos into opensearch-agent-skills, preserving history."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "OpenSearch Contributors" },
]
# Runtime deps only. Anything not listed here must not be imported by
# src/skills_sync/.
dependencies = [
    "pyyaml>=6.0",
    "skills-ref>=0.1.1",
]

[project.scripts]
# Installed into the venv bin/ so workflows can call it directly after
# `uv sync --project sync-bot`.
opensearch-skills-sync = "skills_sync:_cli"

[project.urls]
Homepage = "https://github.com/AndreKurait/opensearch-agent-skills"
Issues = "https://github.com/AndreKurait/opensearch-agent-skills/issues"

[dependency-groups]
# Test-only deps. Kept in a separate group so `uv sync --no-dev` produces
# a lean production install on the scheduled-runner image.
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_sync"]

# --------------------------------------------------------------------------
# pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# Make src/ imports work without installing the package first — handy for
# `uv run --project sync-bot pytest` in dev.
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
]
